--- a/Cesgranrio.CorretorDeProvas.Web/Views/Web.config
+++ b/Cesgranrio.CorretorDeProvas.Web/Views/Web.config
@@ -21,6 +21,7 @@
         <!-- views agora tem acesso às extensões em util-->
         <add namespace="Cesgranrio.CorretorDeProvas.Util" />
         
+      
       </namespaces>
     </pages>
   </system.web.webPages.razor>
@@ -46,6 +47,11 @@
     <compilation>
       <assemblies>
         <add assembly="System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+      
+        <!-- X.PagedList precisa destes assemblies para não termos erros nas views-->
+        <add assembly="System.Runtime, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+        <add assembly="System.Collections, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+      
       </assemblies>
     </compilation>
   </system.web>
