--- a/Cesgranrio.CorretorDeProvas.Web/Web.config
+++ b/Cesgranrio.CorretorDeProvas.Web/Web.config
@@ -15,6 +15,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <globalization enableClientBasedCulture="true" uiCulture="pt-BR" culture="pt-BR"/>
+  
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
     <httpModules>
