added list, edit layout

--- a/Cesgranrio.CorretorDeProvas.Web/Cesgranrio.CorretorDeProvas.Web.csproj
+++ b/Cesgranrio.CorretorDeProvas.Web/Cesgranrio.CorretorDeProvas.Web.csproj
@@ -197,13 +197,17 @@
     <Compile Include="VerificarAcessoFilter.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Content\oldbootstrap - Copy.old" />
+    <Content Include="Content\tema\animate.css" />
     <Content Include="Content\bootstrap.css" />
-    <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\tema\light-bootstrap-dashboard.css" />
     <Content Include="Content\PagedList.css" />
+    <Content Include="Content\tema\sidebar-1.jpg" />
+    <Content Include="Content\tema\sidebar-2.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
-    <Content Include="Content\Site.css" />
+    <Content Include="Content\site.css" />
     <Content Include="Model1.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>Model1.edmx</DependentUpon>
@@ -215,7 +219,6 @@
       <LastGenOutput>Model1.cs</LastGenOutput>
     </Content>
     <Content Include="Scripts\bootstrap.js" />
-    <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -230,14 +233,15 @@
     <Content Include="Scripts\corretordeprovas.validate.js" />
     <Content Include="Scripts\corretordeprovas.util.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
-    <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
-    <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\tema\bootstrap-checkbox-radio-switch.js" />
+    <Content Include="Scripts\tema\bootstrap-notify.js" />
+    <Content Include="Scripts\tema\light-bootstrap-dashboard.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -268,10 +272,11 @@
     <Content Include="Views\Questao\Editar.cshtml" />
     <Content Include="Views\Questao\Remover.cshtml" />
     <Content Include="Views\Questao\Adicionar.cshtml" />
+    <Content Include="Views\Usuario\Login - Copy.cshtml" />
+    <Content Include="Views\Shared\_Layout - Copy.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Main\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
