Unity for ioc added

--- a/Cesgranrio.CorretorDeProvas.Web/Views/Web.config
+++ b/Cesgranrio.CorretorDeProvas.Web/Views/Web.config
@@ -20,8 +20,9 @@
         <add namespace="Cesgranrio.CorretorDeProvas.Web" />
         <!-- views agora tem acesso às extensões em util-->
         <add namespace="Cesgranrio.CorretorDeProvas.Util" />
-        
-      
+        <!---permite usar POCO nas views-->
+        <add namespace="Cesgranrio.CorretorDeProvas.DAL.Model" />
+
       </namespaces>
     </pages>
   </system.web.webPages.razor>
