--- a/Cesgranrio.CorretorDeProvas.Web/Web.config
+++ b/Cesgranrio.CorretorDeProvas.Web/Web.config
@@ -15,7 +15,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <globalization enableClientBasedCulture="true" uiCulture="pt-BR" culture="pt-BR"/>
+    <globalization enableClientBasedCulture="true" uiCulture="pt-BR" culture="pt-BR" />
   
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
@@ -75,6 +75,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="Entities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Cesgranrio.CorretorDeProvas;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="Entities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Cesgranrio.CorretorDeProvas;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="CorretorDeProvasDbContext" connectionString="data source=localhost;initial catalog=Cesgranrio.CorretorDeProvas;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
