--- a/Cesgranrio.CorretorDeProvas.DAL/Cesgranrio.CorretorDeProvas.DAL.csproj
+++ b/Cesgranrio.CorretorDeProvas.DAL/Cesgranrio.CorretorDeProvas.DAL.csproj
@@ -52,6 +52,15 @@
     <Compile Include="CorretorDeProvasDbContext.cs" />
     <Compile Include="ICorretorDeProvasDbContext.cs" />
     <Compile Include="ILoginUsuarioRepository.cs" />
+    <Compile Include="Migrations\201705022332066_initialcreate.cs" />
+    <Compile Include="Migrations\201705022332066_initialcreate.Designer.cs">
+      <DependentUpon>201705022332066_initialcreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201705022333342_RespostaControleVersao.cs" />
+    <Compile Include="Migrations\201705022333342_RespostaControleVersao.Designer.cs">
+      <DependentUpon>201705022333342_RespostaControleVersao.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\Candidato.cs" />
     <Compile Include="Model\Grupo.cs" />
     <Compile Include="IRepository.cs" />
@@ -70,6 +79,14 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201705022332066_initialcreate.resx">
+      <DependentUpon>201705022332066_initialcreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201705022333342_RespostaControleVersao.resx">
+      <DependentUpon>201705022333342_RespostaControleVersao.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
