fixing concurrency in questions

--- a/Cesgranrio.CorretorDeProvas.Web/Views/Web.config
+++ b/Cesgranrio.CorretorDeProvas.Web/Views/Web.config
@@ -36,7 +36,13 @@
       <remove name="BlockViewHandler"/>
       <add name="BlockViewHandler" path="*" verb="*" preCondition="integratedMode" type="System.Web.HttpNotFoundHandler" />
     </handlers>
-  </system.webServer>
+  
+    <httpErrors errorMode="Custom" existingResponse="Auto">
+      <clear />
+      <error statusCode="404" responseMode="ExecuteURL" path="/Erro/PaginaNaoEncontrada" />
+      <error statusCode="500" responseMode="ExecuteURL" path="/Erro/FalhaNaAplicacao" />
+    </httpErrors>
+</system.webServer>
 
   <system.web>
     <!--sempre validar requests para evitar ataques-->
