--- a/Cesgranrio.CorretorDeProvas.Web/Web.config
+++ b/Cesgranrio.CorretorDeProvas.Web/Web.config
@@ -57,6 +57,11 @@
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
+    <httpErrors errorMode="Custom" existingResponse="Auto">
+      <clear />
+      <error statusCode="404" responseMode="ExecuteURL" path="/Erro/PaginaNaoEncontrada" />
+      <error statusCode="500" responseMode="ExecuteURL" path="/Erro/FalhaNaAplicacao" />
+    </httpErrors>
   </system.webServer>
   <system.codedom>
     <compilers>
