--- a/Cesgranrio.CorretorDeProvas.Web/Cesgranrio.CorretorDeProvas.Web.csproj
+++ b/Cesgranrio.CorretorDeProvas.Web/Cesgranrio.CorretorDeProvas.Web.csproj
@@ -249,6 +249,7 @@
     <Compile Include="App_Start\UnityConfig.cs" />
     <Compile Include="Controllers\ErroController.cs" />
     <Compile Include="Controllers\RespostaController.cs" />
+    <Compile Include="GrupoAcesso.cs" />
     <Compile Include="Models\RespostaVM.cs" />
     <Compile Include="Models\QuestaoVM.cs" />
     <Compile Include="Models\ErroVM.cs" />
@@ -261,6 +262,7 @@
     <Compile Include="Models\LoginVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UIHelper.cs" />
+    <Compile Include="SomenteElaboradorFilter.cs" />
     <Compile Include="VerificarAcessoFilter.cs" />
   </ItemGroup>
   <ItemGroup>
