--- a/Cesgranrio.CorretorDeProvas.Web/Cesgranrio.CorretorDeProvas.Web.csproj
+++ b/Cesgranrio.CorretorDeProvas.Web/Cesgranrio.CorretorDeProvas.Web.csproj
@@ -289,6 +289,7 @@
     <Content Include="sass\_variables.sass" />
     <Content Include="sass\screen.sass" />
     <Content Include="sass\lightbox.sass" />
+    <Content Include="Content\Cesgranrio.CorretorDeProvas.Simulador.zip" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\corretordeprovas.validate.js" />
     <Content Include="Scripts\corretordeprovas.util.js" />
