--- a/Cesgranrio.CorretorDeProvas.Web/Cesgranrio.CorretorDeProvas.Web.csproj
+++ b/Cesgranrio.CorretorDeProvas.Web/Cesgranrio.CorretorDeProvas.Web.csproj
@@ -266,6 +266,15 @@
     <Compile Include="VerificarAcessoFilter.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\2017-05-04_21h14_56.png" />
+    <Content Include="Content\2017-05-04_21h18_05.png" />
+    <Content Include="Content\2017-05-04_21h18_28.png" />
+    <Content Include="Content\2017-05-04_21h18_53.png" />
+    <Content Include="Content\2017-05-04_21h19_12.png" />
+    <Content Include="Content\2017-05-04_21h19_22.png" />
+    <Content Include="Content\2017-05-04_21h19_53.png" />
+    <Content Include="Content\2017-05-04_21h25_26.png" />
+    <Content Include="Content\2017-05-04_21h36_44.png" />
     <Content Include="Content\favicon.ico" />
     <Content Include="Content\lightbox.css" />
     <Content Include="Content\tema\animate.css" />
