--- a/Cesgranrio.CorretorDeProvas.Web/Cesgranrio.CorretorDeProvas.Web.csproj
+++ b/Cesgranrio.CorretorDeProvas.Web/Cesgranrio.CorretorDeProvas.Web.csproj
@@ -275,6 +275,7 @@
     <Content Include="Content\2017-05-04_21h19_53.png" />
     <Content Include="Content\2017-05-04_21h25_26.png" />
     <Content Include="Content\2017-05-04_21h36_44.png" />
+    <Content Include="Content\2017-05-04_22h00_55.png" />
     <Content Include="Content\favicon.ico" />
     <Content Include="Content\lightbox.css" />
     <Content Include="Content\tema\animate.css" />
