Fixed out of memory exception for larger answer lists

--- a/Cesgranrio.CorretorDeProvas.Simulador/app.config
+++ b/Cesgranrio.CorretorDeProvas.Simulador/app.config
@@ -18,6 +18,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="CorretorDeProvasDbContext" connectionString="data source=localhost;initial catalog=Cesgranrio.CorretorDeProvas;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework;Connection Timeout=30" providerName="System.Data.SqlClient" />
+    <add name="CorretorDeProvasDbContext" connectionString="data source=localhost;initial catalog=Cesgranrio.CorretorDeProvas;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework;Connection Timeout=60;Max Pool Size=1000" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
