--- a/Cesgranrio.CorretorDeProvas.Web/Web.config
+++ b/Cesgranrio.CorretorDeProvas.Web/Web.config
@@ -24,6 +24,7 @@
     </httpModules>
   </system.web>
   <runtime>
+    <gcAllowVeryLargeObjects enabled="true" />
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
